First stage complete